--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "watchify -o js/bundle.js -v -d js/app.js",
-    "build": "browserify ./client -t [envify --NODE_ENV production] | uglifyjs -cm > js/bundle.min.js"
+    "build": "browserify . -t [envify --NODE_ENV production] | uglifyjs -cm > js/bundle.min.js"
   },
   "author": "",
   "license": "ISC",
